# Hacktober_linux

./: Cargo.toml  README.md  build.rs  link.ld  linker.ld  run.sh  setup_commands
.cargo/: config.toml
src/: boot.s  bootloader.rs  console.rs  cpu.rs  gui.rs  main.rs  memory.rs  nyan.rs  print.rs  sync.rs  terminal.rs  window.rs
src/arch/aarch64/: boot.s  mod.rs
src/boot/: interrupts.s
src/drivers/: fb.rs  font.rs  font_8x8.inc  keyboard.rs  mod.rs  mouse.rs  uart.rs  virtio.rs
src/kernel/: device.rs  interrupt.rs  memory.rs  mod.rs  process.rs
src/ui/: mod.rs  terminal.rs  window.rs
