[package]
name = "hacktober_linux"
version = "0.1.0"
edition = "2021"

[dependencies]
spin = "0.9.8"
bitflags = "2.4.1"
volatile = "0.2.6"

[build-dependencies]
cc = "1.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Add target configuration
[target.'cfg(target_arch = "aarch64")']
rustflags = [
    "-C", "link-arg=-Tlinker.ld",
]
