[package]
name = "nyannix"
version = "0.1.0"
edition = "2021"

[dependencies]
spin = "0.9.8"
linked_list_allocator = "0.10.5"
volatile = "0.4.6"
bitflags = "2.4.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[build-dependencies]
compiler_builtins = { version = "0.1.142", optional = true }

[workspace]
resolver = "2"
